<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Category"
    android:orientation="vertical"
    android:background="@drawable/backgroundgradient"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="30dp">

            <ImageView
                android:layout_width="295dp"
                android:layout_height="206dp"
                android:src="@drawable/event3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="30dp">


            <Button
                android:id="@+id/birthday"
                android:textAllCaps="false"
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/birth"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:drawableLeft="@drawable/add"
                android:drawableRight="@drawable/confetti"
                />
            <Button
                android:id="@+id/marriage"
                android:textAllCaps="false"
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/marry"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:drawableLeft="@drawable/add"
                android:drawableRight="@drawable/venue"
                />
            <Button
                android:id="@+id/custom"
                android:textAllCaps="false"
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/custom"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:drawableLeft="@drawable/add"
                android:drawableRight="@drawable/event"
                />

        </LinearLayout>



    </LinearLayout>






</ScrollView>