<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/backgroundgradient"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/introtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textIsSelectable="true"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_light"
            android:textAllCaps="false"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/event4"
                android:paddingTop="10dp"



                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingTop="20dp"
            android:paddingRight="60dp"
            android:layout_marginTop="10dp"
            android:weightSum="2">


            <Button
                android:id="@+id/createbutton"
                android:layout_width="203dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/add"
                android:text="@string/createbuttontext"
                android:textAllCaps="false"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/viewbutton"
                android:layout_width="203dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/view"
                android:text="@string/viewbuttontext"
                android:textAllCaps="false"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>



</ScrollView>