<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgradient"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".CreateMarriageInvitation">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/address"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#080707"
                android:hint="@string/venueaddress"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:textStyle="bold"

                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp">


            <EditText
                android:id="@+id/description"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:backgroundTint="#080707"
                android:hint="@string/description"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:textStyle="bold"

                />


        </LinearLayout>


        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">


            <EditText
                android:id="@+id/host"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="@string/hostname"
                android:backgroundTint="#080707"
                android:textCursorDrawable="@null"

                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Date : "
                android:textSize="20sp"
                android:textStyle="bold"


                />

            <TextView


                android:id="@+id/datetext"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:backgroundTint="#080707"
                android:textSize="20sp"
                android:textStyle="bold"

                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/setdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="Set Date"
                android:textSize="20sp"
                android:textStyle="bold"

                />




        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Time : "
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <TextView


                android:id="@+id/timetext"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:backgroundTint="#080707"
                android:textSize="20sp"
                android:textStyle="bold"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/settime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="Set Time"
                android:textSize="20sp"
                android:textStyle="bold"

                />




        </LinearLayout>


        <LinearLayout
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/previewbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="Preview"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <Button
                android:id="@+id/savebutton"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="Save"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <Button
                android:id="@+id/clearbutton"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="Clear"
                android:textSize="20sp"
                android:textStyle="bold"

                />


        </LinearLayout>


    </LinearLayout>



</ScrollView>